--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   deploy:
+    #pause auto deploys to implement updates
+    if: github.ref == 'refs/heads/production'
     runs-on: ubuntu-latest
     
     steps:
