--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,11 @@ jobs:
             sudo apt-get update -y
             sudo apt-get install -y git python3 python3-pip
           fi
+          # Trust GitHub host key
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+
 
           # Clone if missing
           if [ ! -d "$REPO_PATH/.git" ]; then
