--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,37 +27,33 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+    run: |
+      set -euo pipefail
 
-      - name: Deploy to EC2
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          REPO_PATH: /home/ubuntu/Downloads/Forex-Trading-Bot
-          REPO_URL: https://github.com/Brian-Soh/Forex-Trading-Bot.git
-        run: |
-          set -euo pipefail
+      ssh -o StrictHostKeyChecking=yes ubuntu@"$EC2_HOST" bash <<'EOSSH'
+      set -euo pipefail
 
-          ssh -o StrictHostKeyChecking=yes ubuntu@"$EC2_HOST" bash <<'EOSSH'
-          set -euo pipefail
+      REPO_PATH="/home/ubuntu/Downloads/Forex-Trading-Bot"
+      REPO_URL="https://github.com/Brian-Soh/Forex-Trading-Bot.git"
 
-          # Ensure git and python exist
-          if ! command -v git >/dev/null 2>&1; then
-            sudo apt-get update -y
-            sudo apt-get install -y git python3 python3-pip
-          fi
+      # Ensure git and python exist
+      if ! command -v git >/dev/null 2>&1; then
+        sudo apt-get update -y
+        sudo apt-get install -y git python3 python3-pip
+      fi
 
-          # Clone if missing
-          if [ ! -d "$REPO_PATH/.git" ]; then
-            mkdir -p "$REPO_PATH"
-            git clone --branch production --single-branch "$REPO_URL" "$REPO_PATH"
-          fi
+      # Clone if missing
+      if [ ! -d "$REPO_PATH/.git" ]; then
+        mkdir -p "$REPO_PATH"
+        git clone --branch production --single-branch "$REPO_URL" "$REPO_PATH"
+      fi
 
-          cd "$REPO_PATH"
-          git fetch --all
-          git reset --hard origin/production
+      cd "$REPO_PATH"
+      git fetch --all
+      git reset --hard origin/production
 
-          # Install/upgrade deps
-          /usr/bin/pip3 install --upgrade pip
-          /usr/bin/pip3 install -r requirements.txt
+      /usr/bin/pip3 install --upgrade pip
+      /usr/bin/pip3 install -r requirements.txt
 
-          echo "Deployed $(git rev-parse --short HEAD) at $(date -Is)"
-          EOSSH
+      echo "Deployed \$(git rev-parse --short HEAD) at \$(date -Is)"
+      EOSSH
